--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.4.18",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.0.7",
     "typescript": "5.1.6"
   }
 }
