--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "paths": {
         "src/*": ["./src/*"],
         "@/pages/*": ["./pages/*"],
+        "@/utils/*": ["./src/utils/*"]
       }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
